# dicomexport

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  lint.yml  windows-exe.yml
dicomexport/: beam_model.py  ds_get.py  export_geo_topas.py  export_plan.py  export_plan_racehorse.py  export_plan_topas.py  export_study_topas.py  import_ct.py  import_plan.py  import_plan_dicom.py  import_plan_pld.py  import_plan_rst.py  import_rtstruct.py  main.py  main_geo_export.py  main_plan_export.py  model_ct.py  model_plan.py  model_rtstruct.py  parser_geo_export.py  parser_main.py  parser_plan_export.py  topas_text.py
res/beam_models/: README.md
res/spr_tables/: README.md  SPRtoMaterial__Brain.txt
res/test_phantoms/: README.md
res/test_plans/: README.md
res/test_studies/: README.md
res/test_studies/DCPT_headphantom/: CT.HeadPhantom.1.dcm  CT.HeadPhantom.10.dcm  CT.HeadPhantom.100.dcm  CT.HeadPhantom.101.dcm  CT.HeadPhantom.102.dcm  CT.HeadPhantom.103.dcm  CT.HeadPhantom.104.dcm  CT.HeadPhantom.105.dcm  CT.HeadPhantom.106.dcm  CT.HeadPhantom.107.dcm  CT.HeadPhantom.108.dcm  CT.HeadPhantom.109.dcm  CT.HeadPhantom.11.dcm  CT.HeadPhantom.110.dcm  CT.HeadPhantom.111.dcm  CT.HeadPhantom.112.dcm  CT.HeadPhantom.113.dcm  CT.HeadPhantom.114.dcm  CT.HeadPhantom.115.dcm  CT.HeadPhantom.116.dcm  CT.HeadPhantom.117.dcm  CT.HeadPhantom.118.dcm  CT.HeadPhantom.119.dcm  CT.HeadPhantom.12.dcm  CT.HeadPhantom.120.dcm  CT.HeadPhantom.121.dcm  CT.HeadPhantom.122.dcm  CT.HeadPhantom.123.dcm  CT.HeadPhantom.124.dcm  CT.HeadPhantom.125.dcm  CT.HeadPhantom.126.dcm  CT.HeadPhantom.127.dcm  CT.HeadPhantom.128.dcm  CT.HeadPhantom.129.dcm  CT.HeadPhantom.13.dcm  CT.HeadPhantom.130.dcm  CT.HeadPhantom.131.dcm  CT.HeadPhantom.132.dcm  CT.HeadPhantom.133.dcm  CT.HeadPhantom.134.dcm  (+139 more)
tests/: test_bm.py  test_cli.py  test_ct.py  test_main.py  test_plan.py  test_rs.py
