[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomexport"
description = "Tool for exporting from Dicom RT-PLAN files."
authors = [
    { name = "Niels Bassler", email = "nbassler@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pydicom>=2.3.1", "numpy", "scipy"]
dynamic = ["version"]
# (optional)
keywords = ["dicom", "rt", "radiotherapy", "topas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/nbassler/dicomexport"
Repository = "https://github.com/nbassler/dicomexport"
Issues = "https://github.com/nbassler/dicomexport/issues"
Changelog = "https://github.com/nbassler/dicomexport/releases"
Discussions = "https://github.com/nbassler/dicomexport/discussions"

[project.optional-dependencies]
web = ["streamlit>=1.12.0"]
dev = ["flake8>=6.0.0", "pytest>=7.2.1", "build", "twine"]

# CLI entry point
[project.scripts]
dicomexport = "dicomexport.main:main"
plan-export = "dicomexport.main_plan_export:main"
geo-export = "dicomexport.main_geo_export:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["dicomexport"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
max-line-length = 127
exclude = ".git,__pycache__,.venv,build,dist"

[tool.yapf]
based_on_style = "pep8"
column_limit = 127

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "dicomexport/__version__.py"
